voicemails: remove listen actions
This was implemented in a hackish way and since it's not used currently,
remove it.
